src/validation/tests/snapshots/rusty__validation__tests__assignment_validation_tests__enum_variants_mismatch.snap
---
source: src/validation/tests/assignment_validation_tests.rs
expression: diagnostics
---
error: Assigned value is not a variant of main.color
   ┌─ <internal>:11:22
   │
11 │             color := Dog;       // warning
   │                      ^^^ Assigned value is not a variant of main.color

error: Assigned value is not a variant of main.water
   ┌─ <internal>:12:22
   │
12 │             water := blue;      // warning
   │                      ^^^^ Assigned value is not a variant of main.water

error: Assigned value is not a variant of main.color
   ┌─ <internal>:13:22
   │
13 │             color := sparkling; // warning
   │                      ^^^^^^^^^ Assigned value is not a variant of main.color

error: Assigned value is not a variant of main.color
   ┌─ <internal>:14:22
   │
14 │             color := 2;         // warning
   │                      ^ Assigned value is not a variant of main.color


